[EFL][GTK] REGRESSION(r188828): All performance tests and almost all layout tests crash https://bugs.webkit.org/show_bug.cgi?id=148377

Reviewed by Carlos Garcia Campos.

EFL and GTK don't support TestController::platformPreferences() yet which was introduced by r188828.
It caused all crashes of layout test and performance test on EFL and GTK. So this patch implements
TestController::platformPreferences() using WKPageGroupGetPreferences() which was previous thing for
EFL and GTK at the moment.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::platformWillRunTest):
* WebKitTestRunner/efl/TestControllerEfl.cpp:
(WTR::TestController::platformPreferences):
* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::platformPreferences):


Canonical link: https://commits.webkit.org/166564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188948 268f45cc-cd09-0410-ab3c-d52691b4dbfc